--- a/index.html
+++ b/index.html
@@ -1,11 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Tiffany Roche</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tiffany Roche | Professional</title>
+  <meta name="description" content="Tiffany Roche – project-focused professional portfolio and resume." />
+  <style>
+    :root{
+      --bg1:#0b4ea2;      /* deep blue */
+      --bg2:#0a2f6b;      /* darker blue */
+      --accent1:#21b7d9;  /* teal */
+      --accent2:#ff9a2b;  /* warm orange */
+      --accent3:#e14b3b;  /* warm red */
+      --ink:#0f172a;
+      --paper:rgba(255,255,255,0.92);
+      --muted:rgba(15,23,42,0.65);
+      --line:rgba(15,23,42,0.12);
+      --radius:18px;
+      --shadow: 0 16px 40px rgba(0,0,0,0.22);
+    }
+
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif;
+      color:var(--ink);
+      background:
+        radial-gradient(900px 500px at 70% 10%, rgba(33,183,217,0.25), transparent 60%),
+        radial-gradient(700px 420px at 15% 85%, rgba(255,154,43,0.20), transparent 55%),
+        linear-gradient(135deg, var(--bg1), var(--bg2));
+      min-height:100vh;
+      padding:32px 18px 56px;
+    }
+
+    .wrap{
+      max-width: 920px;
+      margin: 0 auto;
+    }
+
+    .card{
+      background:var(--paper);
+      border:1px solid rgba(255,255,255,0.35);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      overflow:hidden;
+    }
+
+    header{
+      padding:28px 28px 18px;
+      display:flex;
+      gap:18px;
+      align-items:center;
+      border-bottom:1px solid var(--line);
+      background:
+        linear-gradient(135deg, rgba(255,255,255,0.70), rgba(255,255,255,0.90));
+    }
+
+    .avatar{
+      width:74px;
+      height:74px;
+      border-radius: 18px;
+      overflow:hidden;
+      flex:0 0 auto;
+      border:1px solid rgba(15,23,42,0.12);
+      background: rgba(255,255,255,0.75);
+    }
+    .avatar img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      display:block;
+    }
+
+    .title h1{
+      margin:0;
+      font-size: 1.5rem;
+      letter-spacing: 0.2px;
+    }
+    .title .tagline{
+      margin:6px 0 0;
+      color:var(--muted);
+      font-size: 0.98rem;
+      line-height:1.3;
+    }
+
+    .chips{
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px;
+      margin-top:10px;
+    }
+    .chip{
+      font-size: 0.85rem;
+      padding:6px 10px;
+      border-radius: 999px;
+      border:1px solid rgba(15,23,42,0.14);
+      background: rgba(255,255,255,0.75);
+    }
+
+    main{
+      padding: 22px 28px 28px;
+      display:grid;
+      grid-template-columns: 1.2fr 0.8fr;
+      gap: 22px;
+    }
+
+    @media (max-width: 860px){
+      main{ grid-template-columns: 1fr; }
+      header{ align-items:flex-start; }
+    }
+
+    section{
+      border:1px solid var(--line);
+      border-radius: 16px;
+      padding: 16px 16px 14px;
+      background: rgba(255,255,255,0.78);
+    }
+
+    h2{
+      margin:0 0 10px;
+      font-size: 1.05rem;
+      letter-spacing: 0.2px;
+      display:flex;
+      align-items:center;
+      gap:10px;
+    }
+    .dot{
+      width:10px;
+      height:10px;
+      border-radius: 999px;
+      background: linear-gradient(135deg, var(--accent1), var(--accent2));
+      box-shadow: 0 0 0 3px rgba(33,183,217,0.18);
+    }
+
+    .item{
+      padding: 10px 0;
+      border-top: 1px solid var(--line);
+    }
+    .item:first-of-type{ border-top:none; padding-top:0; }
+    .item:last-of-type{ padding-bottom:0; }
+
+    .item .row{
+      display:flex;
+      justify-content:space-between;
+      gap:12px;
+      flex-wrap:wrap;
+      align-items:baseline;
+    }
+    .role{
+      font-weight: 700;
+    }
+    .org{
+      color: var(--muted);
+      font-weight: 600;
+    }
+    .meta{
+      color: var(--muted);
+      font-size: 0.9rem;
+    }
+    .bullets{
+      margin:8px 0 0;
+      padding-left: 18px;
+      color: rgba(15,23,42,0.92);
+    }
+    .bullets li{ margin:6px 0; }
+
+    .links a{
+      display:inline-block;
+      margin: 6px 10px 0 0;
+      padding: 8px 10px;
+      border-radius: 12px;
+      border:1px solid rgba(15,23,42,0.14);
+      text-decoration:none;
+      color: var(--ink);
+      background: rgba(255,255,255,0.8);
+    }
+    .links a:hover{
+      border-color: rgba(15,23,42,0.22);
+      transform: translateY(-1px);
+    }
+
+    footer{
+      padding: 16px 28px 22px;
+      border-top:1px solid var(--line);
+      color: rgba(255,255,255,0.80);
+      text-align:center;
+      font-size: 0.9rem;
+    }
+    .smallnote{
+      color: var(--muted);
+      font-size: 0.92rem;
+      line-height: 1.4;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Tiffany Roche</h1>
-  <p>Professional portfolio. Content coming shortly.</p>
+  <div class="wrap">
+    <div class="card">
+      <header>
+        <div class="avatar">
+          <img src="assets/tnr-avatar.png" alt="TNR avatar" />
+        </div>
+        <div class="title">
+          <h1>Tiffany Roche</h1>
+          <p class="tagline">Project-focused. Systems-minded. Calm under pressure.</p>
+          <div class="chips">
+            <span class="chip">Cary, NC</span>
+            <span class="chip">Project Management + Tech</span>
+            <span class="chip">TNR</span>
+          </div>
+        </div>
+      </header>
+
+      <main>
+        <div>
+          <section>
+            <h2><span class="dot"></span>Snapshot</h2>
+            <p class="smallnote">
+              Replace this paragraph with a tight 3–5 sentence summary:
+              what you do, what you’re pivoting toward, and the kind of work you’re looking for.
+              Keep it factual and confident.
+            </p>
+          </section>
+
+          <section style="margin-top:14px;">
+            <h2><span class="dot"></span>Selected Experience</h2>
+
+            <div class="item">
+              <div class="row">
+                <div><span class="role">Work-Based Learning / Internship</span> <span class="org">• Carolina Cyber Center / Wake Tech</span></div>
+                <div class="meta">2026</div>
+              </div>
+              <ul class="bullets">
+                <li>Replace with 2–4 accomplishment bullets that show deliverables and outcomes.</li>
+                <li>Keep verbs strong. No fluff. No “responsible for.”</li>
+              </ul>
+            </div>
+
+            <div class="item">
+              <div class="row">
+                <div><span class="role">Prior Professional Work</span> <span class="org">• Highlights</span></div>
+                <div class="meta">Selected</div>
+              </div>
+              <ul class="bullets">
+                <li><strong>USA Today</strong> – DC Bureau (highlight what you did that signals rigor).</li>
+                <li><strong>U.S. Congress</strong> – Internship (highlight initiative + performance).</li>
+                <li><strong>BDO Seidman</strong> – (highlight analytical or operational credibility).</li>
+              </ul>
+            </div>
+          </section>
+
+          <section style="margin-top:14px;">
+            <h2><span class="dot"></span>Education and Credentials</h2>
+            <div class="item">
+              <div class="row">
+                <div><span class="role">Wake Technical Community College</span> <span class="org">• A.A. Cybersecurity (in progress)</span></div>
+                <div class="meta">Online</div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="row">
+                <div><span class="role">Meredith College</span> <span class="org">• B.A. Economics</span></div>
+                <div class="meta">2011</div>
+              </div>
+            </div>
+            <p class="smallnote" style="margin:10px 0 0;">
+              Add CAPM, other certs, and tools here as they become official.
+            </p>
+          </section>
+        </div>
+
+        <div>
+          <section>
+            <h2><span class="dot"></span>Links</h2>
+            <div class="links">
+              <a href="#" target="_blank" rel="noopener">GitHub</a>
+              <a href="#" target="_blank" rel="noopener">LinkedIn</a>
+              <a href="#" target="_blank" rel="noopener">Resume (PDF)</a>
+            </div>
+            <p class="smallnote" style="margin-top:10px;">
+              Keep links minimal. You can add more later, but restraint reads confident.
+            </p>
+          </section>
+
+          <section style="margin-top:14px;">
+            <h2><span class="dot"></span>Tools</h2>
+            <p class="smallnote">
+              List a tight set: Python, VS Code, Git/GitHub, Excel, Jira, etc.
+              Only what you can defend in conversation.
+            </p>
+          </section>
+
+          <section style="margin-top:14px;">
+            <h2><span class="dot"></span>Contact</h2>
+            <p class="smallnote">
+              Add a professional email here once you’re ready.
+              You can also use a simple contact line like:
+              “Email available upon request.”
+            </p>
+          </section>
+        </div>
+      </main>
+    </div>
+
+    <footer>
+      TNR • Single-page professional profile
+    </footer>
+  </div>
 </body>
 </html>
